--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           </div>
         </article>
         <article class="rounded-2xl border overflow-hidden bg-white" style="border-color:var(--line)">
-          <img referrerpolicy="no-referrer" src="https://images.pexels.com/photos/8989729/pexels-photo-8989729.jpeg?auto=compress&cs=tinysrgb&w=1200&h=600&fit=crop" onerror="if(!this.dataset.f){this.dataset.f=1;this.src='https://images.pexels.com/photos/6942040/pexels-photo-6942040.jpeg?auto=compress&cs=tinysrgb&w=1200&h=600&fit=crop';}else{this.onerror=null;this.src='consultorio2.jpg';}" alt="Dependência química" class="h-44 w-full object-cover"/>
+          <img referrerpolicy="no-referrer" src="https://images.pexels.com/photos/5413271/pexels-photo-5413271.jpeg?auto=compress&cs=tinysrgb&w=1200&h=600&fit=crop" onerror="if(!this.dataset.f){this.dataset.f=1;this.src='https://images.pexels.com/photos/6942040/pexels-photo-6942040.jpeg?auto=compress&cs=tinysrgb&w=1200&h=600&fit=crop';}else{this.onerror=null;this.src='consultorio2.jpg';}" alt="Dependência química" class="h-44 w-full object-cover"/>
           <div class="p-5">
             <h3 class="text-lg font-semibold" style="color:var(--ink)">Dependência química</h3>
             <p class="mt-1 text-sm text-zinc-600">Estratégias de redução de danos e reabilitação com rede de apoio.</p>
@@ -226,7 +226,7 @@
           </a>
           <button id="copyBtn" class="rounded-full px-5 py-3 border hover:shadow" style="border-color:var(--line); color:var(--ink)">Copiar número</button>
         </div>
-        <p class="mt-3 text-sm text-zinc-500">Horário de atendimento: seg–sex, 9h às 18h. Fora do horário, sua mensagem será respondida no próximo dia útil.</p>
+        <p class="mt-4 text-sm text-zinc-600">Em caso de <strong>emergência psiquiátrica</strong>, procure atendimento imediato: <strong>SAMU 192</strong> ou <a class="underline" href="https://www.cvv.org.br/" target="_blank" rel="noopener">CVV 188 (24h)</a>.</p>
       </div>
       <div class="rounded-2xl border overflow-hidden shadow bg-white p-6" style="border-color:var(--line)">
         <div class="flex items-start gap-4">
